kuber/5_apps_access/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: otherns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-vol
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:latest
      volumes:
      - name: nginx-config-vol
        configMap:
          name: nginx-config
